@@ -9,6 +9,7 @@ Proj 6.1+ required.
   - #5564, BRIN crash fix and support for parallel in PG17+
           (Paul Ramsey, Regina Obe)
   - #5876, Fix ST_AddPoint with empty point argument
+  - #5874, Line substring returns wrong answer (Paul Ramsey)
 
 
 PostGIS 3.4.4
